# qc-libcpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  SetupLinux.md
.github/workflows/: ci.yml  cxx-versions.yml  linux.yml  macos.yml  windows.yml
cmake/: list_operations.cmake  set_compiler_flags.cmake  set_cppx_dirs.cmake  set_libcpp_dirs.cmake  utils.cmake
core/: CMakeLists.txt  compat.h
core/containers/: forward_list.h  vector.h
core/lock_free/: spsc_queue.h
core/smart_pointers/: shared_ptr.h  unique_ptr.h
core/string/: string.cpp  string.h
core/tagged_union/: utilities.h  variant.h  visit.h  visit_bkp.h
core/tagged_union/experimental/: ClangBuildAnalyzerSession.txt  results_v1.md  results_v2.md  utilities.h
core/tagged_union/experimental/v1/: analysis.txt  variant.h
core/tagged_union/experimental/v2/: variant.h
cppx/concurrency/: threadsafe_stack.h
cppx/containers/: vector.h
cppx/smart_pointers/: shared_ptr.h  shared_ptr_comments.txt  unique_ptr.h
cppx/tagged_union/: variant.h
docs/: Doxyfile
experimental/tagged_union/: ClangBuildAnalyzerSession.txt  bench_stdlib.cpp  bench_v1  bench_v1.cpp  bench_v2  bench_v2.cpp  report_stdlib.txt  report_v1.txt  report_v2.txt  results.md  run_clangBuildAnalyser.sh  run_hyperfine.sh  utilities.h  variant.cpp  variant_test.cpp  variant_tests.cpp
experimental/tagged_union/v1/: analysis.txt
experimental/tagged_union/v2/: analysis.txt  variant.h
tests/: CMakeLists.txt
tests/forward_list_test/: forward_list_test.cpp
tests/shared_ptr_test/: shared_ptr_test.cpp
tests/spsc_queue_test/: spsc_queue_test.cpp
tests/string_test/: string_test.cpp
tests/unique_ptr_test/: unique_ptr_test.cpp
tests/variant_test/: variant_test.cpp
tests/vector_test/: vector_test.cpp
